nginx-deployment-test/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-2
  namespace: myweb-2
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 2
  selector:
    matchLabels:
      app: myapp-2
  template:
    metadata:
      labels:
        app: myapp-2
    spec:
      serviceAccountName: myweb-2
      containers:
        - name: myapp-2
          image: okumop/myweb:v0.0.12
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet: 
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
